# byte-in-bottle

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: backend_tests.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  run.sh
backend/api/models/chats/: ask_model.py
backend/api/routers/v1/chats/: api_chat_router.py
backend/api/services/: cache_service.py  config_service.py  core_service.py
backend/api/tests/models/: test_generic_model.py
backend/api/tests/models/chats/: test_ask_model.py
backend/api/tests/routers/v1/: __init__.py  test_api_main_router.py
backend/api/tests/routers/v1/chats/: __init__.py  test_api_chat_router.py
backend/api/tests/services/: test_cache_service.py  test_config_service.py  test_core_service.py
backend/examples/: test_api.py  test_curl.sh
backend/src/api/: __init__.py  main.py
backend/src/api/models/: chat_model.py  generic_model.py
backend/src/api/routers/v1/: api_main_router.py
backend/src/api/routers/v1/chats/: api_chat_router.py
backend/src/api/services/: __init__.py  cache_service.py  config_service.py  core_service.py
backend/src/backend/: __init__.py  main.py
frontend/: Dockerfile  nuxt.config.ts  package-lock.json
frontend/app/: app.vue
