[project]
name = "backend"
version = "0.1.0"
description = "Byte in Bottle FastAPI Backend Service."
readme = "README.md"
authors = [
    { name = "Nuttaphat", email = "nuttaphat.aruno@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.0",
    "ollama>=0.6.0",
    "python-dotenv>=1.1.1",
    "redis>=7.0.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
backend-api = "api.main:app"

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
